# kedro-starters

./: README.md
.github/workflows/: test-kedro-new.yml
mini-poetry/: README.md  cookiecutter.json  prompts.yml
mini-poetry/tests/: config.yml
mini-poetry/{{ cookiecutter.repo_name }}/: .envrc  README.md  conda.yml  pyproject.toml
mini-poetry/{{ cookiecutter.repo_name }}/conf/base/: catalog.yml  logging.yml  parameters.yml
mini-poetry/{{ cookiecutter.repo_name }}/conf/test/: catalog.yml
mini-poetry/{{ cookiecutter.repo_name }}/data/01_raw/: data-test.csv
mini-poetry/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/pipelines/data_processing/: pipeline.py
mini-poetry/{{ cookiecutter.repo_name }}/tests/: conftest.py  test_run.py
tests/mini-poetry/: config.yml
